# comfyui-output-gallery

./: .gitignore  README.md  __init__.py  pyproject.toml
ogallery/: __init__.py  config.py  db.py  graph_parser.py  indexer.py  metadata_extractor.py  server.py  settings_paths.py  thumbnails.py
ogallery/routes/: __init__.py  gallery_routes.py
static/: gallery.css  gallery.js
templates/: gallery.html
tests/: conftest.py  test_graph_parser.py  test_indexer.py
web/comfyui/: menu_extension.js
